# Azalea

./: .gitignore  Azalea.pro  CMakeLists.txt  README.md  appveyor.yml  index.html  style.css
.circleci/: config.yml
.github/workflows/: build-on-macos.yml  windows-build.yml
azalea/: CMakeLists.txt  __serialization.cpp  azalea.pro  azalea.qrc  azaleaapplication.cpp  azaleaapplication.hpp  configmanager.cpp  configmanager.hpp  main.cpp  optional.cpp  optional.hpp  serialization.hpp  singleton.cpp  singleton.hpp
azalea/mastodon/: CMakeLists.txt  __serialization_helper.hpp  apibase.cpp  apibase.hpp  apicontext.cpp  apicontext.hpp  mastodonapi.cpp  mastodonapi.hpp  oauthapi.cpp  oauthapi.hpp  oauthtoken.hpp  v1.hpp
azalea/mastodon/v1/: appsapi.cpp  appsapi.hpp  instanceapi.cpp  instanceapi.hpp  notificationsapi.cpp  notificationsapi.hpp  statusesapi.cpp  statusesapi.hpp  timelinesapi.cpp  timelinesapi.hpp
azalea/mastodon/v1/entities/: __serialization_helper.hpp  application.cpp  application.hpp  mastodon.hpp  mastodon.serialization.cpp  oauth2.deserialization.cpp  oauth2.hpp  oauth2.proto  oauth2.serialization.cpp
azalea/mastodon/v1/stream/: streamingclient.cpp  streamingclient.hpp
azalea/test/: CMakeLists.txt  test_optional.cpp  test_statusformatter.cpp
azalea/translations/: CMakeLists.txt  ja_jp.ts  ko_kr.ts
azalea/ui/: CMakeLists.txt  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  postarea.cpp  postarea.hpp  postarea.ui  settingswindow.cpp  settingswindow.hpp  settingswindow.ui
azalea/ui/postarea/: emojicompletiondelegate.cpp  emojicompletiondelegate.hpp  emojicompletionmodel.cpp  emojicompletionmodel.hpp  emojipixmapholder.cpp  emojipixmapholder.hpp  replyindicator.cpp  replyindicator.hpp  replyindicator.ui  tootedit.cpp  tootedit.hpp
azalea/ui/timeline/: Status.qml  StatusAdapter.cpp  StatusAdapter.hpp  Timeline.qml  TimelineModel.cpp  TimelineModel.hpp  notificationstatusadapter.cpp  notificationstatusadapter.hpp  statusadapter.cpp  statusadapter.hpp  statusadapterbase.cpp  statusadapterbase.hpp  statusformatter.cpp  statusformatter.hpp  timelinemodel.cpp  timelinemodel.hpp
scripts/: appleseed.pl
tests/: CMakeLists.txt  test_deserialize.cpp  test_hello_world.cpp  tests.pro
